crates/plotnik-tests/tests/02-parser/recovery_incomplete/predicate_missing_value.txt
Q = (identifier == )
------------------ DIAGNOSTICS -------------------
error: expected a string or regex after the operator
 --> query.ptk:1:20
  |
1 | Q = (identifier == )
  |                    ^
  |
help: use a quoted string after a string operator, or a regex after `=~` or `!~`
